# eagine-msgbus

./: .clang-tidy  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.rst
doc/presentation/: CMakeLists.txt
doc/presentation/latex/: CMakeLists.txt  beamer_eagine.tex.in  overview.tex
example/eagine/: CMakeLists.txt
example/eagine/msgbus/: 000_stream.cpp  001_log_certs.cpp  001_loopback.cpp  001_signal.cpp  002_direct.cpp  003_shutdown.cpp  004_discovery.cpp  005_broadcast_blob.cpp  005_byte_histogram.cpp  005_topology.cpp  006_file_histogram.cpp  006_ping.cpp  006_pong.cpp  006_stream_histogram.cpp  007_ping.cpp  007_pong.cpp  007_pong_registry.cpp  008_file_histogram.cpp  008_pong_registry.cpp  009_fib_service.cpp  010_fib_async.cpp  010_fib_futures.cpp  011_fibonacci.cpp  012_fib_threads.cpp  012_sudoku_threads.cpp  013_conn_setup.cpp  014_tracker.cpp  015_stream.cpp  CMakeLists.txt  deb-changelog
include/: CMakeLists.txt  Sources.cmake
include/eagine/: message_bus.hpp
include/eagine/logging/type/: remote_node.hpp
include/eagine/message_bus/: asio.hpp  blobs.hpp  bridge.hpp  conn_setup.hpp  connection.hpp  connection_kind.hpp  context.hpp  context_fwd.hpp  direct.hpp  endpoint.hpp  future.hpp  handler_map.hpp  invoker.hpp  message.hpp  network.hpp  node_kind.hpp  posix_mqueue.hpp  registry.hpp  remote_node.hpp  resources.hpp  resources.inl  router.hpp  router_address.hpp  serialize.hpp  service.hpp  service_interface.hpp  service_requirements.hpp  signal.hpp  skeleton.hpp  subscriber.hpp  types.hpp  verification.hpp
include/eagine/message_bus/service/: application_info.hpp  build_info.hpp  compiler_info.hpp  endpoint_info.hpp  host_info.hpp  ping_pong.hpp  resource_transfer.hpp  sudoku.hpp  system_info.hpp
include/eagine/msgbus/: acceptor.hpp  actor.hpp  asio.hpp  blobs.hpp  blobs.inl  bridge.hpp  bridge.inl  conn_factory.hpp  conn_setup.hpp  conn_setup.inl  connection.hpp  connection_kind.hpp  context.hpp  context.inl  context_fwd.hpp  direct.hpp  endpoint.hpp  endpoint.inl  future.hpp  handler_map.hpp  invoker.hpp  loopback.hpp  message.hpp  message.inl  network.hpp  node_kind.hpp  posix_mqueue.hpp  registry.hpp  registry.inl  remote_node.hpp  remote_node.inl  resources.gen.in  resources.hpp  resources.inl  router.hpp  router.inl  router_address.hpp  serialize.hpp  service.hpp  service_interface.hpp  (+6 more)
include/eagine/msgbus/config/: basic.hpp
include/eagine/msgbus/service/: ability.hpp  application_info.hpp  build_info.hpp  common_info.hpp  compiler_info.hpp  discovery.hpp  endpoint_info.hpp  host_info.hpp  ping_pong.hpp  resource_transfer.hpp  shutdown.hpp  statistics.hpp  stream.hpp  sudoku.hpp  system_info.hpp  topology.hpp  tracker.hpp
source/: CMakeLists.txt
source/app/: CMakeLists.txt  bridge.cpp  deb-changelog  eagine-local-bridge.sh  eagine-sudoku-tiling.sh  file_server.cpp  pingable.cpp  pinger.cpp  resource_hexdump.cpp  resource_histogram.cpp  router.cpp  sudoku_helper.cpp  sudoku_tiling.cpp
source/app/bridge/: CMakeLists.txt  main.cpp
source/app/bridge/resource/: eagine-msgbus-bridge.bco
source/app/file_server/: CMakeLists.txt  main.cpp
source/app/file_server/resource/: eagine-msgbus-file-server.bco
source/app/monitor/: CMakeLists.txt  monitor.cpp
source/app/monitor/include/: HostParameterModel.hpp  HostParameterViewModel.hpp  HostViewModel.hpp  InstViewModel.hpp  MonitorBackend.hpp  MonitorTheme.hpp  MonitorViewModel.hpp  NodeListViewModel.hpp  NodeParameterModel.hpp  NodeParameterViewModel.hpp  NodeViewModel.hpp  PickRoleProxyModel.hpp  SelectedItemViewModel.hpp  TrackerModel.hpp
source/app/monitor/src/: HostParameterViewModel.cpp  HostViewModel.cpp  InstViewModel.cpp  MonitorBackend.cpp  MonitorTheme.cpp  MonitorViewModel.cpp  NodeListViewModel.cpp  NodeParameterViewModel.cpp  NodeViewModel.cpp  SelectedItemViewModel.cpp  TrackerModel.cpp
source/app/monitor/views/: InstanceView.qml
source/app/mqtt_bridge/: CMakeLists.txt  main.cpp
source/app/mqtt_bridge/resource/: eagine-msgbus-mqtt-bridge.bco
source/app/pingable/: CMakeLists.txt  main.cpp
source/app/pingable/resource/: eagine-msgbus-pingable.bco
source/app/pinger/: CMakeLists.txt  main.cpp
source/app/pinger/resource/: eagine-msgbus-pinger.bco
source/app/resource_get/: CMakeLists.txt  main.cpp
source/app/resource_get/resource/: eagine-msgbus-resource-get.bco
source/app/resource_hexdump/: CMakeLists.txt  main.cpp
source/app/resource_hexdump/resource/: eagine-msgbus-resource-hexdump.bco
source/app/resource_histogram/: CMakeLists.txt  main.cpp
source/app/resource_histogram/resource/: eagine-msgbus-resource-histogram.bco
source/app/router/: CMakeLists.txt  main.cpp
source/app/router/resource/: eagine-msgbus-router.bco
source/app/sudoku_helper/: CMakeLists.txt  main.cpp
source/app/sudoku_helper/resource/: eagine-msgbus-sudoku-helper.bco
source/app/sudoku_tiling/: CMakeLists.txt  main.cpp
source/app/sudoku_tiling/resource/: eagine-msgbus-sudoku-tiling.bco
source/app/sudoku_tiling_gui/: CMakeLists.txt  tiling.qrc
source/app/tiling/: CMakeLists.txt  tiling.cpp  tiling.qml  tiling.qrc
source/benchmark/: CMakeLists.txt
source/config/: CMakeLists.txt  service-msgbus.txt  service.yaml
source/lib/: CMakeLists.txt
source/lib/eagine/: CMakeLists.txt
source/lib/eagine-msgbus/: CMakeLists.txt  blobs.cpp  bridge.cpp  context.cpp  endpoint.cpp  epilogue.inl  implement.inl  message.cpp  prologue.inl  registry.cpp  remote_node.cpp  resources.cpp  router.cpp  setup.cpp
source/modules/eagine/: CMakeLists.txt  asio_impl.cpp  blobs.cpp  blobs_impl.cpp  bridge.cpp  bridge_impl.cpp  connection_setup.cpp  connection_setup_impl.cpp  context.cpp  context_impl.cpp  deb-changelog  direct.cpp  endpoint.cpp  endpoint_impl.cpp  future.cpp  handler_map.cpp  interface.cpp  invoker.cpp  loopback.cpp  message.cpp  message_impl.cpp  msgbus.cpp  posix_mqueue_impl.cpp  remote_node.cpp  remote_node_impl.cpp  router.cpp  router_address.cpp  router_impl.cpp  service.cpp  signal.cpp  skeleton.cpp  subscriber.cpp  types.cpp
submodules/: CMakeLists.txt
(+207 files in other folders)
